[package]
name = "chip8rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clap = "2.33.3"
piston = "0.32.0"
piston2d-opengl_graphics = "0.43.0"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.37.0"
